--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
+    "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "localforage": "^1.10.0",
@@ -19,6 +22,7 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
